syntax = "proto3";

package user;

option go_package = "/;api";
import "google/protobuf/empty.proto";


message SignIn {
    string email=1;
    string password=2;
}

message SignUp {
    string name=1;
    string nickName=2;
    string email=3;
    string password=4;
    string confirmedPassword=5;
    string photo=6;
}

enum ResponseStatus {
    OK=0;
    Error=1;
}

message Response {
    string user_id=1;
    string name=2;
    string nickName=3;
    string photo=4;
    ResponseStatus status=5;
    string statusMessage=6;
}

message UserData {
    string json=1;
}


service User {
    rpc signIn(SignIn) returns(Response);
    rpc signUp(SignUp) returns(Response);

    rpc editUser(UserData) returns(google.protobuf.Empty);
}
